Fixed BBC quote tag and added code tag

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,10 @@ input, select, textarea {
     width: 100%;
 	margin-bottom: 5px;
 }
+pre
+{
+	background-color: #ffffff;
+}
 .forum-title
 {
 	font-size: 20px;
