CSS color tweak

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -97,7 +97,7 @@ pre
 }
 .div-news
 {
-	background-color: #deecff;
+	background-color: #dbe2ef;
 	color: #000000;
 	font-weight: bolder;
 	font-size: 20px;
