--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,7 +26,7 @@ input, select, textarea {
 }
 pre
 {
-	background-color: #000000 !important;
+	background-color: #4c4c4c !important;
 	color: #ffffff;
 	border-radius: 5px;
 	margin-top: 0px;
